static/css/style.css
/* Homa Page Images */
.container {
    text-align: center;
}

/* Images on about.html */
.img-thumbnail {
    padding: 0 !important;
    display: inline-block !important;
    border: 0 !important;
    width: 25% !important;
    margin: 10px !important;
}
.col-md-5 img {
    width: 65%;
}
/* Register and Log In navbar btn */
.btn-link {
    font-size: large !important;
}
/* Font Awsome icons on home page */
.fa-bars {
    color: white;
    font-size: large;
}
/* Footer Icons */
.fa-stack {
    color: gray !important;
}
/* Serach bar */
.btn-outline-link {
    color: #D18195 !important;
}
/* Register and Log In Forms */
.input-group-text {
    background-color: #E3E2E2  !important;
    color: #D18195 !important;
}
/* Recipes card */
.card {
    background-color: #E3E2E2  !important;
}
#time,
#portions {
    display: inline-block !important;
}

/* Accordition in card displaying recipe */
.accordion-button {
    color: #D18195 !important;
    background-color: white !important;
    margin-top: 50px !important;
}

/* Edit and Delete btn */
.btn-sm {
    margin: 5px; 
    background-color: lightgray !important;
    color: #D18195 !important;
    float: right;
}

/* Flash Messages */
.alert {
    text-align: center;
}
/* 404 page */
.callout-container {
    height: 100vh;

    background: url("https://images.unsplash.com/photo-1589652717521-10c0d092dea9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80") no-repeat fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;   
    justify-content: center; 

    position: relative;
}

.jumbotron {
    background-color: transparent;
}

.jumbotron h1 {
    color: white;
    font-size: 990%;
    text-align: center;
    margin-top: 0;
}

.jumbotron h2 {
    color: white;
    font-size: 300%;
    text-align: center;
}

.jumbotron .lead {
    color: white;
    font-size: 300%;
    margin: 25px 0;
}

.link {
    color: white;
    font-size: 300%;
    float: right;
}

